# ZHMModSDK

./: CMakeLists.txt
Mods/ChaosMod/: CMakeLists.txt  README.md
Mods/ChaosMod/Src/: ChaosMod.cpp  ChaosMod.h  ChaosModSelection.cpp  ChaosModUI.cpp  EffectRegistry.h  IChaosEffect.cpp  IChaosEffect.h  IUnlocker.cpp  IUnlocker.h
Mods/ChaosMod/Src/Effects/: ZAuthoritativeFigureEffect.cpp  ZAuthoritativeFigureEffect.h  ZCameraEffect.cpp  ZCameraEffect.h  ZCameraEffectBase.cpp  ZCameraEffectBase.h  ZCameraFOVEffect.cpp  ZCameraFOVEffect.h  ZCameraFOVEffectBase.cpp  ZCameraFOVEffectBase.h  ZCameraFOVEffects.h  ZDisableInputsEffect.cpp  ZDisableInputsEffect.h  ZExplodeActorsOnTouchEffect.cpp  ZExplodeActorsOnTouchEffect.h  ZExplodeNearbyActorsEffect.h  ZExplodeRandomActorEffect.cpp  ZExplodeRandomActorEffect.h  ZExplosiveKnockoutEffect.cpp  ZExplosiveKnockoutEffect.h  ZFakeCrashEffect.cpp  ZFakeCrashEffect.h  ZFlipCameraEffect.cpp  ZFlipCameraEffect.h  ZFollowHitmanBehaviourEffect.cpp  ZFollowHitmanBehaviourEffect.h  ZForceForwardMovementEffect.h  ZGravityModifierEffects.cpp  ZGravityModifierEffects.h  ZInstinctModifierEffect.cpp  ZInstinctModifierEffect.h  ZInterpolatingEffectBase.h  ZInvertControlsEffect.h  ZInvisibleActorsEffect.cpp  ZInvisibleActorsEffect.h  ZLagEffect.cpp  ZLagEffect.h  ZMinimapNoActorsEffect.h  ZNoHUDEffect.h  ZOverheadCameraEffect.cpp  (+19 more)
Mods/ChaosMod/Src/Helpers/: CameraUtils.cpp  CameraUtils.h  EntityUtils.cpp  EntityUtils.h  ImGuiExtras.h  InputActionNames.h  Utils.cpp  Utils.h  ZExplosionHelper.cpp  ZExplosionHelper.h  ZQuickEntityLoader.cpp  (+5 more)
(+74 files in other folders)
